deployment/mongo-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: mongo-server
  selector:
    app: mongo
