deployment/nfs.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nfs
spec:
  clusterIP: 10.105.99.184
  ports:
    - port: 2049
      targetPort: 2049-tcp
      protocol: TCP
  type: NodePort
  selector:
    app: nfs
