deployment/server.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    com.docker.project: server
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
        com.docker.project: server
  template:
    metadata:
        labels:
            com.docker.project: server
    spec:
      volumes:
        - name: nfs-storage
          nfs:
            server: 10.105.99.184  # ip of the nfs service
            path: /
            readOnly: no
      containers:
        - image: rmni/server:main
          name: server
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /mnt/storage
              name: nfs-storage
          terminationMessagePolicy: FallbackToLogsOnError
      restartPolicy: Always
