deployment/server_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    com.docker.project: server
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
        com.docker.project: server
  template:
    metadata:
        labels:
            com.docker.project: server
    spec:
        containers:
            - image: legraina/server
              name: server
              ports:
                - containerPort: 5000
                  protocol: TCP
              resources: {}
              livenessProbe:
                httpGet:
                  path: /
                  port: 5000
                initialDelaySeconds: 30
                periodSeconds: 10
        restartPolicy: Always
status: {}
