deployment/socketio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: socketio
spec:
  ports:
    - name: 7000-tcp
      port: 7000
      protocol: TCP
      targetPort: 7000
  selector:
    com.docker.project: socketio
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: socketio
  name: socketio
spec:
  replicas: 1
  selector:
    matchLabels:
        com.docker.project: socketio
  template:
    metadata:
        labels:
            com.docker.project: socketio
    spec:
        containers:
            - image: rmni/socketio:main
              name: socketio
              ports:
                - containerPort: 7000
                  protocol: TCP
              resources: {}
        restartPolicy: Always
status: {}
