deployment/webapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    com.docker.project: webapp
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
        com.docker.project: webapp
  template:
    metadata:
        labels:
            com.docker.project: webapp
    spec:
        containers:
            - image: rmni/webapp:main
              name: webapp
              imagePullPolicy: Always
              ports:
                - containerPort: 80
        restartPolicy: Always
