deployment/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmn-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: rmn-webapp
                port:
                  number: 80
          - path: /new-correction(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rmn-webapp
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5000
          - path: /(socket.io/.*)
            pathType: Prefix
            backend:
              service:
                name: socketio
                port:
                  number: 7000
